pigGo image setting backup

--- a/Github/图床.md
+++ b/Github/图床.md
@@ -2,7 +2,7 @@
 
 [toc]
 
-## 新建仓库
+## Git仓库新建
 
 **1.** 新建一个仓库
 
@@ -18,111 +18,54 @@
 
 **3.**配置PicGo
 
-**注意：**仓库名的格式是`用户名/仓库`，比如我创建了一个叫做`MyPic`的仓库，在PicGo里我要设定的仓库名就是`Assassin-King/MyPic`。一般我们选择`main`分支即可。然后记得点击确定以生效，然后可以点击`设为默认图床`来确保上传的图床是GitHub。
+**注意：**仓库名的格式是`用户名/仓库`，比如我创建了一个叫做`Typora-Note`的仓库，在PicGo里我要设定的仓库名就是`Assassin-King/Typora-Note`。一般我们选择`main`分支即可。然后记得点击确定以生效，然后可以点击`设为默认图床`来确保上传的图床是GitHub。
+
+![image-20221018170036625](https://raw.githubusercontent.com/Assassin-King/Typora-Note/master/Images/markdown/image-20221018170036625.png?token=AHO3KZLSUPY4H4VBODSA3BTDJZVXE)
 
 
 
-![image-20220701153137491](https://raw.githubusercontent.com/Assassin-King/MyPic/master/img/markdownimage-20220701153137491.png?token=AHO3KZMODV2EEKPUV5AWLI3CX2RRM)
+## raw.githubusercontent.com 访问不了
+
+```
+C:\Users\h433899>nslookup raw.githubusercontent.com
+服务器:  UnKnown
+Address:  192.168.32.1
+
+非权威应答:
+名称:    raw.githubusercontent.com
+Addresses:  2606:50c0:8003::154
+          2606:50c0:8000::154
+          2606:50c0:8001::154
+          2606:50c0:8002::154
+          185.199.111.133
+          185.199.108.133
+          185.199.109.133
+          185.199.110.133
+```
 
 
 
+编辑本地host 文件， 文件路径：**C:\WINDOWS\system32\drivers\etc** 
 
+```
+185.199.109.133 raw.githubusercontent.com
+185.199.108.133 raw.githubusercontent.com
+185.199.110.133 raw.githubusercontent.com
+185.199.111.133 raw.githubusercontent.com
+```
+
+保存后刷新本地DNS:  `ipconfig /flushdns`
 
 ## PigGo Config 备份
 
+![image-20221018171200863](https://raw.githubusercontent.com/Assassin-King/Typora-Note/master/Images/markdown/image-20221018171200863.png?token=AHO3KZPG2CMGF7HBZVO7WMDDJZXB4)
+
 `{
-  "uploaded": [
-    {
-      "fileName": "image-20220701153137491.png",
-      "width": 798,
-      "height": 447,
-      "extname": ".png",
-      "imgUrl": "https://raw.githubusercontent.com/Assassin-King/MyPic/master/img/markdownimage-20220701153137491.png?token=AHO3KZMODV2EEKPUV5AWLI3CX2RRM",
-      "type": "github",
-      "id": "df10bc63-1389-4235-a8b7-186e1f9212f5"
-    }
-  ],
-  "picBed": {
-    "current": "github",
-    "uploader": "github",
-    "smms": {
-      "token": ""
-    },
-    "list": [
-      {
-        "name": "SM.MS图床",
-        "type": "smms",
-        "visible": false
-      },
-      {
-        "name": "腾讯云COS",
-        "type": "tcyun",
-        "visible": true
-      },
-      {
-        "name": "GitHub图床",
-        "type": "github",
-        "visible": true
-      },
-      {
-        "name": "七牛图床",
-        "type": "qiniu",
-        "visible": true
-      },
-      {
-        "name": "Imgur图床",
-        "type": "imgur",
-        "visible": false
-      },
-      {
-        "name": "阿里云OSS",
-        "type": "aliyun",
-        "visible": true
-      },
-      {
-        "name": "又拍云图床",
-        "type": "upyun",
-        "visible": false
-      }
-    ],
-    "qiniu": {
-      "accessKey": "1-ak-5iWyXyQaDC8LpQcJrrVFnChA-MDaUIuQbi2",
-      "area": "z2",
-      "bucket": "bobo-markdown-images",
-      "options": "",
-      "path": "",
-      "secretKey": "1tfmPAQ3JiGl1v9OB5sBVeMYDXdSOhh5i0G1NF7W",
-      "url": "http://markdown.wangyingbo.site"
-    },
-    "github": {
-      "branch": "master",
-      "customUrl": "",
-      "path": "img/markdown",
-      "repo": "Assassin-King/MyPic",
-      "token": "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"
-    }
-  },
-  "settings": {
-    "shortKey": {
-      "picgo:upload": {
-        "enable": true,
-        "key": "CommandOrControl+Shift+P",
-        "name": "upload",
-        "label": "快捷上传"
-      }
-    },
-    "server": {
-      "port": 36677,
-      "host": "127.0.0.1",
-      "enable": true
-    },
-    "showUpdateTip": true,
-    "uploadNotification": true,
-    "checkBetaUpdate": false,
-    "pasteStyle": "markdown"
-  },
-  "picgoPlugins": {},
-  "debug": true,
-  "PICGO_ENV": "GUI",
-  "needReload": false
+	"github": {
+		"branch": "master",
+		"customUrl": "",
+		"path": "Images/markdown/",
+		"repo": "Assassin-King/Typora-Note",
+		"token": "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"
+	}
 }`
