--- a/First Of All/图床.md
+++ b/First Of All/图床.md
@@ -86,3 +86,13 @@ Addresses:  2606:50c0:8003::154
 }
 ```
 
+
+
+## Github token 丢失
+
+目前频繁遇到PicGo图片上传失败， 然后github 上看到token 丢失的情况，仿佛被谁手动delete 一样，还未发现原因，先备份下。
+
+![](https://raw.githubusercontent.com/Assassin-King/Typora-Note/master/Images/markdown/image-20221019162026315.png)
+
+
+
