--- a/Interview/网络安全.md
+++ b/Interview/网络安全.md
@@ -4,12 +4,37 @@
 
 ## Cookie欺骗
 
-### 什么是cookie欺骗
+### cookie 组成结构
 
-改变cookie的值，发给服务器，就是cookie欺骗。
-正常情况下，受浏览器的内部cookie机制所限，每个cookie只能被它的原服务器所访问，我们操作不了原服务器。
+```
+[name] [value] [path] [domain] [expires] [secure] [httponly]
+键 值 路径 所属域 过期时间 secure flag httponly flag
+```
 
-### cookie使用示例
+![image-20221021165731640](https://raw.githubusercontent.com/Assassin-King/Typora-Note/master/Images/markdown/image-20221021165731640.png)
+
+
+
+### java 操作cookie
+
+```java
+new Cookie(String name, String value)：创建一个Cookie对象，必须传入cookie的名字和cookie的值
+getValue()：得到cookie保存的值
+getName()：获取cookie的名字
+setMaxAge(int expiry)：设置cookie的有效期，默认为-1。这个如果设置负数，表示客服端关闭，cookie就会删除。0表示马上删除。正数表示有效时间，单位是秒。
+setPath(String uri)：设置cookie的作用域
+```
+
+
+
+HttpServletRequest和HttpServletResponse对Cookie进行操作的常见方法：
+
+```java
+response.addCookie(Cookie cookie)：将cookie给客户端进行保存
+resquest.getCookies()：得到客服端传过来的所有cookie对象
+```
+
+### js 操作cookie
 
 ```html
 <!DOCTYPE html>
@@ -33,7 +58,17 @@
 
 
 
-### 如何欺骗
+### 什么是cookie欺骗
 
-`正常来说cookie要和domain域名对应。每个cookie只能被对应的域名所访问，其他域名无法访问。`
+改变cookie的值，发给服务器，就是cookie欺骗。
+正常情况下，受浏览器的内部cookie机制所限，每个cookie只能被它的原服务器所访问，我们操作不了原服务器。
 
+
+
+
+
+
+
+### 如何避免
+
+- `cookie` 有一个 `httpOnly` 属性，可以设置一个 只能在服务端设置的`cookie` 的键值对，即禁止客户端修改携带 `httpOnly` 属性的 `cookie` 键值对。`response.addHeader("Set-Cookie", "uid=123; Path=/; HttpOnly")`
