--- a/Interview/网络安全.md
+++ b/Interview/网络安全.md
@@ -63,12 +63,23 @@ resquest.getCookies()：得到客服端传过来的所有cookie对象
 改变cookie的值，发给服务器，就是cookie欺骗。
 正常情况下，受浏览器的内部cookie机制所限，每个cookie只能被它的原服务器所访问，我们操作不了原服务器。
 
+1. 在本机搭建web服务器，页面中利用js来设置cookie
 
+2. 修改本地的host文件（windows/system32/drivers/etc/hosts），添加一行记录：  127.0.0.1 www.xxx.com
 
+   达到dns欺骗，再次访问www.xxx.com时，会跳转到本机的web服务页面上，而被设置cookie
 
+3. revert hosts文件，再次访问www.xxx.com时，浏览器就会读取刚才设置好的cookie，而被欺骗。 
 
+### 如何保障cookie 安全
 
+1. **设置 Cookie 的生存周期** ，**Expires**俗称“过期时间”，用的是绝对时间点，**Max-Age**用的是相对时间，单位是秒，两者可以同时出现，两者的失效时间可以一致，也可以不一致，但浏览器会优先采用 **Max-Age** 计算失效期。
 
-### 如何避免
+2. **设置 Cookie 的作用域**，**Domain**和**Path**指定了 Cookie 所属的域名和路径，浏览器在发送 Cookie 前会从 URI 中提取出 host 和 path 部分，对比 Cookie 的属性。如果不满足条件，就不会在请求头里发送 。
 
-- `cookie` 有一个 `httpOnly` 属性，可以设置一个 只能在服务端设置的`cookie` 的键值对，即禁止客户端修改携带 `httpOnly` 属性的 `cookie` 键值对。`response.addHeader("Set-Cookie", "uid=123; Path=/; HttpOnly")`
+3. `response.addHeader("Set-Cookie", "uid=123; Path=/; HttpOnly")`。
+
+   在 JS 脚本里可以用 `document.cookie` 来读写 Cookie 数据，这就带来了安全隐患，有可能会导致“跨站脚本”（XSS）攻击窃取数据。属性**HttpOnly**会告诉浏览器，此 Cookie 只能通过浏览器 HTTP 协议传输，禁止其他方式访问，浏览器的 JS 引擎就会禁用 document.cookie 等一切相关的 API。
+
+4. 
+
